test(archunit): forbid sun.* / com.sun.* / jdk.internal.* imports in production
Adds a noInternalJdkImports ArchUnit rule. ByteBufferUtility is the
single documented exception — it deliberately uses jdk.internal.misc.Unsafe
for off-heap deallocation, gated by the matching
--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED arg in pom.xml.
The rule excludes the class by simple name (.doNotHaveSimpleName) so
if a second class ever needs internal access the rule will fail and
force a deliberate widening of the exception.